// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`3D Probe (stock) regression guard emits stable G-code for X 1`] = `
[
  "; Initial Probe setup",
  "%UNITS=modal.units",
  "%Z_ADJUST=7",
  "%X_ADJUST=13",
  "%Y_ADJUST=13",
  "%X_PROBE_DISTANCE=30",
  "%Y_PROBE_DISTANCE=30",
  "%Z_PROBE_DISTANCE=-30",
  "%PROBE_FAST_FEED=200",
  "%PROBE_SLOW_FEED=75",
  "%X_RETRACT_DISTANCE=-2",
  "%Y_RETRACT_DISTANCE=-2",
  "%Z_RETRACT_DISTANCE=2",
  "%Z_RETRACT_FINAL=2",
  "%Z_THICKNESS=0",
  "%X_THICKNESS=-1",
  "%Y_THICKNESS=-1",
  "%PROBE_DELAY=0.05",
  "%Y_RETRACT_DIRECTION=-1",
  "%X_RETRACT_DIRECTION=-1",
  "%PROBE_MOVE_FEED=0",
  "G10 L20 P0 X0",
  "G91 G21",
  "; X-probe",
  "G38.2 X[X_PROBE_DISTANCE] F[PROBE_FAST_FEED]",
  "G91 G0 X[X_RETRACT_DISTANCE]",
  "%retractSign=Math.sign(X_RETRACT_DISTANCE)",
  "G38.2 X[(Math.abs(X_RETRACT_DISTANCE) + 1) * (retractSign * -1)] F[PROBE_SLOW_FEED]",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 X[X_THICKNESS]",
  "G91 G0 X[X_RETRACT_DISTANCE]",
]
`;

exports[`3D Probe (stock) regression guard emits stable G-code for XY 1`] = `
[
  "; Initial Probe setup",
  "%UNITS=modal.units",
  "%Z_ADJUST=7",
  "%X_ADJUST=13",
  "%Y_ADJUST=13",
  "%X_PROBE_DISTANCE=30",
  "%Y_PROBE_DISTANCE=30",
  "%Z_PROBE_DISTANCE=-30",
  "%PROBE_FAST_FEED=200",
  "%PROBE_SLOW_FEED=75",
  "%X_RETRACT_DISTANCE=-2",
  "%Y_RETRACT_DISTANCE=-2",
  "%Z_RETRACT_DISTANCE=2",
  "%Z_RETRACT_FINAL=2",
  "%Z_THICKNESS=0",
  "%X_THICKNESS=-1",
  "%Y_THICKNESS=-1",
  "%PROBE_DELAY=0.05",
  "%Y_RETRACT_DIRECTION=-1",
  "%X_RETRACT_DIRECTION=-1",
  "%PROBE_MOVE_FEED=0",
  "G10 L20 P0 X0Y0",
  "G91 G21",
  "G91 G0 X[X_RETRACT_DISTANCE]",
  "G91 G0 Y[Y_ADJUST * -1 * Y_RETRACT_DIRECTION]",
  "; X-probe",
  "G38.2 X[X_PROBE_DISTANCE] F[PROBE_FAST_FEED]",
  "G91 G0 X[X_RETRACT_DISTANCE]",
  "%retractSign=Math.sign(X_RETRACT_DISTANCE)",
  "G38.2 X[(Math.abs(X_RETRACT_DISTANCE) + 1) * (retractSign * -1)] F[PROBE_SLOW_FEED]",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 X[X_THICKNESS]",
  "G91 G0 X[X_RETRACT_DISTANCE]",
  "G91 G0 Y[(Y_ADJUST + 6) * Y_RETRACT_DIRECTION]",
  "G91 G0 X[X_ADJUST * -1 * X_RETRACT_DIRECTION]",
  "; Y-probe",
  "G38.2 Y[Y_PROBE_DISTANCE] F[PROBE_FAST_FEED]",
  "G91 G0 Y[Y_RETRACT_DISTANCE]",
  "%retractSign=Math.sign(Y_RETRACT_DISTANCE)",
  "G38.2 Y[(Math.abs(Y_RETRACT_DISTANCE) + 1) * (retractSign * -1)] F[PROBE_SLOW_FEED]",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Y[Y_THICKNESS]",
  "G91 G0 Y[Y_RETRACT_DISTANCE]",
]
`;

exports[`3D Probe (stock) regression guard emits stable G-code for XYZ 1`] = `
[
  "; Initial Probe setup",
  "%UNITS=modal.units",
  "%Z_ADJUST=7",
  "%X_ADJUST=13",
  "%Y_ADJUST=13",
  "%X_PROBE_DISTANCE=30",
  "%Y_PROBE_DISTANCE=30",
  "%Z_PROBE_DISTANCE=-30",
  "%PROBE_FAST_FEED=200",
  "%PROBE_SLOW_FEED=75",
  "%X_RETRACT_DISTANCE=-2",
  "%Y_RETRACT_DISTANCE=-2",
  "%Z_RETRACT_DISTANCE=2",
  "%Z_RETRACT_FINAL=2",
  "%Z_THICKNESS=0",
  "%X_THICKNESS=-1",
  "%Y_THICKNESS=-1",
  "%PROBE_DELAY=0.05",
  "%Y_RETRACT_DIRECTION=-1",
  "%X_RETRACT_DIRECTION=-1",
  "%PROBE_MOVE_FEED=0",
  "G10 L20 P0 X0Y0Z0",
  "G91 G21",
  "; Z-probe",
  "G38.2 Z[Z_PROBE_DISTANCE] F[PROBE_FAST_FEED]",
  "G91 G0 Z[Z_RETRACT_DISTANCE]",
  "%retractSign=Math.sign(Z_RETRACT_DISTANCE)",
  "G38.2 Z[(Math.abs(Z_RETRACT_DISTANCE) + 1) * (retractSign * -1)] F[PROBE_SLOW_FEED]",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Z[Z_THICKNESS]",
  "G91 G0 Z[Z_RETRACT_DISTANCE]",
  "G91 G0 X[(X_ADJUST + 6) * X_RETRACT_DIRECTION]",
  "G91 G0 Z-[Z_ADJUST]",
  "; X-probe",
  "G38.2 X[X_PROBE_DISTANCE] F[PROBE_FAST_FEED]",
  "G91 G0 X[X_RETRACT_DISTANCE]",
  "%retractSign=Math.sign(X_RETRACT_DISTANCE)",
  "G38.2 X[(Math.abs(X_RETRACT_DISTANCE) + 1) * (retractSign * -1)] F[PROBE_SLOW_FEED]",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 X[X_THICKNESS]",
  "G91 G0 X[X_RETRACT_DISTANCE]",
  "G91 G0 Y[(Y_ADJUST + 6) * Y_RETRACT_DIRECTION]",
  "G91 G0 X[X_ADJUST * -1 * X_RETRACT_DIRECTION]",
  "; Y-probe",
  "G38.2 Y[Y_PROBE_DISTANCE] F[PROBE_FAST_FEED]",
  "G91 G0 Y[Y_RETRACT_DISTANCE]",
  "%retractSign=Math.sign(Y_RETRACT_DISTANCE)",
  "G38.2 Y[(Math.abs(Y_RETRACT_DISTANCE) + 1) * (retractSign * -1)] F[PROBE_SLOW_FEED]",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Y[Y_THICKNESS]",
  "G91 G0 Y[Y_RETRACT_DISTANCE]",
  "G91 G0 Z[Z_ADJUST + Z_RETRACT_FINAL]",
  "G90 G0 X0Y0",
]
`;

exports[`3D Probe (stock) regression guard emits stable G-code for Y 1`] = `
[
  "; Initial Probe setup",
  "%UNITS=modal.units",
  "%Z_ADJUST=7",
  "%X_ADJUST=13",
  "%Y_ADJUST=13",
  "%X_PROBE_DISTANCE=30",
  "%Y_PROBE_DISTANCE=30",
  "%Z_PROBE_DISTANCE=-30",
  "%PROBE_FAST_FEED=200",
  "%PROBE_SLOW_FEED=75",
  "%X_RETRACT_DISTANCE=-2",
  "%Y_RETRACT_DISTANCE=-2",
  "%Z_RETRACT_DISTANCE=2",
  "%Z_RETRACT_FINAL=2",
  "%Z_THICKNESS=0",
  "%X_THICKNESS=-1",
  "%Y_THICKNESS=-1",
  "%PROBE_DELAY=0.05",
  "%Y_RETRACT_DIRECTION=-1",
  "%X_RETRACT_DIRECTION=-1",
  "%PROBE_MOVE_FEED=0",
  "G10 L20 P0 Y0",
  "G91 G21",
  "; Y-probe",
  "G38.2 Y[Y_PROBE_DISTANCE] F[PROBE_FAST_FEED]",
  "G91 G0 Y[Y_RETRACT_DISTANCE]",
  "%retractSign=Math.sign(Y_RETRACT_DISTANCE)",
  "G38.2 Y[(Math.abs(Y_RETRACT_DISTANCE) + 1) * (retractSign * -1)] F[PROBE_SLOW_FEED]",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Y[Y_THICKNESS]",
  "G91 G0 Y[Y_RETRACT_DISTANCE]",
]
`;

exports[`3D Probe (stock) regression guard emits stable G-code for Z 1`] = `
[
  "; Initial Probe setup",
  "%UNITS=modal.units",
  "%Z_ADJUST=7",
  "%X_ADJUST=13",
  "%Y_ADJUST=13",
  "%X_PROBE_DISTANCE=30",
  "%Y_PROBE_DISTANCE=30",
  "%Z_PROBE_DISTANCE=-30",
  "%PROBE_FAST_FEED=200",
  "%PROBE_SLOW_FEED=75",
  "%X_RETRACT_DISTANCE=-2",
  "%Y_RETRACT_DISTANCE=-2",
  "%Z_RETRACT_DISTANCE=2",
  "%Z_RETRACT_FINAL=2",
  "%Z_THICKNESS=0",
  "%X_THICKNESS=-1",
  "%Y_THICKNESS=-1",
  "%PROBE_DELAY=0.05",
  "%Y_RETRACT_DIRECTION=-1",
  "%X_RETRACT_DIRECTION=-1",
  "%PROBE_MOVE_FEED=0",
  "G10 L20 P0 Z0",
  "G91 G21",
  "; Z-probe",
  "G38.2 Z[Z_PROBE_DISTANCE] F[PROBE_FAST_FEED]",
  "G91 G0 Z[Z_RETRACT_DISTANCE]",
  "%retractSign=Math.sign(Z_RETRACT_DISTANCE)",
  "G38.2 Z[(Math.abs(Z_RETRACT_DISTANCE) + 1) * (retractSign * -1)] F[PROBE_SLOW_FEED]",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Z[Z_THICKNESS]",
  "G91 G0 Z[Z_RETRACT_FINAL]",
]
`;
